# CESARops

./: # Code Citations4.md  .gitignore  CESAROPS_ULTIMATE_PLATFORM_SUMMARY.md  CI_FIXES.md  CONTRIBUTING.md  Charlie_Brown_Fender_Analysis_Report.md  DRONE_INTEGRATION_RESEARCH.md  LICENSE  ML_Enhancement_Analysis_Report.md  README.md  README_MultiModal.md  REAL_DRIFTER_TRAINING_SUMMARY.md  Rosa_Case_Real_Analysis_Report.txt  WORLD_CLASS_ENHANCEMENT_STRATEGY.md  build_rust.bat  build_rust_simple.bat  cesarops_build_exe.py  cesarops_enhanced.py  cesarops_installer.bat  cesarops_module_implementation_plan.py  cesarops_module_plan.json  cesarops_quick_install.bat  cesarops_requirements.txt  cesarops_test.py  check_data.py  check_distances.py  check_python_version.py  check_rosa_data.py  check_tkinter.py  collaborative_sarops_platform.py  comprehensive_installer.py  create_config.py  create_rosa_visualization.py  create_run_script.py  drifter_training_pipeline.py  enhanced_drift_analysis.py  enhanced_rosa_analysis.py  fast_drift_engine.py  fetch_historical_weather.py  generate_comprehensive_kml.py  (+46 more)
.github/: copilot-instructions.md
analytics/: sar_metrics.py
models/: rosa_calibrated_drift_model.json  rosa_final_report_clean.txt  rosa_operational_parameters.json  rosa_optimized_operational.json  rosa_sar_summary.txt  simple_regression_model.json  training_report.json
outputs/: ml_trajectory_viewer.html  rosa_case_analysis_visualization.html  rosa_enc_overlay.json  rosa_enhanced_analysis_results.json  rosa_final_summary.json  (+12 more)
rust_core/: Cargo.toml
rust_core/src/: lib.rs
(+10 files in other folders)
